[package]
name = "memory_logger"
version = "0.1.1"
license = "MIT"
edition = "2018"
authors = ["gahag <gabriel.s.b@live.com>"]
description = "A logger that buffers messages in memory, allowing arbitrary flushes"
repository = "https://github.com/gahag/memory_logger"
readme = "readme.md"
keywords = [ "logger", "log", "logging" ]
categories = [ "development-tools::debugging" ]


[features]
target = [ "regex" ]
# There are mutually exclusive:
blocking = [ ]
asynchronous = [ "flume" ]


[dependencies]
log = { version = "0.4", features = [ "std" ] }
flume = { version = "0.7", default-features = false, optional = true }
regex = { version = "1.3", optional = true }


[package.metadata.docs.rs]
features = [ "blocking", "asynchronous", "target" ]
